[gd_scene load_steps=44 format=3 uid="uid://c21uxf1eyhw8k"]

[ext_resource type="Script" path="res://Scripts/Menu/main_menu.gd" id="1_xhcat"]
[ext_resource type="FontFile" uid="uid://b0ut30id2qj3r" path="res://Fonts/dogicapixel.ttf" id="3_cnaou"]
[ext_resource type="Texture2D" uid="uid://g1xdeps4pcd5" path="res://Sprites/Player/GreenSlime/PlayerSlime.png" id="3_qls2q"]
[ext_resource type="Texture2D" uid="uid://c330afso8cxev" path="res://Sprites/Menu/Button.png" id="6_dlnqk"]
[ext_resource type="Texture2D" uid="uid://dgfd4sxovmv7x" path="res://Sprites/Menu/ButtonPress.png" id="7_djpoq"]
[ext_resource type="Texture2D" uid="uid://dag02bqhw2gkp" path="res://Sprites/Menu/ButtonHover.png" id="8_1281r"]
[ext_resource type="Texture2D" uid="uid://8sdxpso45do3" path="res://Sprites/Menu/Blue_Button.png" id="10_efru8"]
[ext_resource type="PackedScene" uid="uid://66jd7vqxgo2r" path="res://Scenes/Menu/controls.tscn" id="10_fuxtq"]
[ext_resource type="Texture2D" uid="uid://dlw6hsul56alj" path="res://Sprites/Menu/Blue_Button_Press.png" id="11_dw1q6"]
[ext_resource type="Texture2D" uid="uid://7t2kig2227a5" path="res://Sprites/Menu/Blue_Button_Hover.png" id="12_vnh5k"]
[ext_resource type="Texture2D" uid="uid://e4a14gb6nb1y" path="res://Sprites/Weapons/WeedtiteMicrogun.png" id="13_e5syq"]
[ext_resource type="Texture2D" uid="uid://dyvcksxnsuf8s" path="res://Sprites/Menu/ShoppingCart.png" id="13_mrqpo"]
[ext_resource type="Texture2D" uid="uid://br06ilqk4ph1t" path="res://Sprites/Menu/SmallButton.png" id="13_nwiw3"]
[ext_resource type="PackedScene" uid="uid://dp0eoiclataar" path="res://Scenes/Menu/Equipment/equipment_passives.tscn" id="13_uba8n"]
[ext_resource type="Texture2D" uid="uid://bckq4415dpkmq" path="res://Sprites/Menu/SmallButtonPress.png" id="14_57otj"]
[ext_resource type="PackedScene" uid="uid://cq3m7ndadb2jt" path="res://Scenes/Menu/Equipment/equipment_weapons.tscn" id="14_mo1ho"]
[ext_resource type="Texture2D" uid="uid://c74f6wajvedd8" path="res://Sprites/Abilities/LifeRegenAbility.png" id="14_vo8jy"]
[ext_resource type="PackedScene" uid="uid://b6sxdtpty5qkn" path="res://Scenes/Menu/Equipment/equipment_abilities.tscn" id="15_c7pa1"]
[ext_resource type="Texture2D" uid="uid://odvmr4eo07xb" path="res://Sprites/Passives/EnergyLootPassive.png" id="15_dwgj7"]
[ext_resource type="PackedScene" uid="uid://cd4ht43jmcn7h" path="res://Scenes/Menu/Shop/shop.tscn" id="15_tg6bh"]
[ext_resource type="Texture2D" uid="uid://bo05c63fb5nmd" path="res://Sprites/Menu/SmallButtonHover.png" id="15_thdy0"]
[ext_resource type="Texture2D" uid="uid://b8p08vx5ohvby" path="res://Sprites/Hats/WitchHat.png" id="16_7gj2l"]
[ext_resource type="Texture2D" uid="uid://dg0vbhcjt3pdw" path="res://Sprites/Pets/Pipsqueak/PipsqueakDisplay.png" id="17_fyg1u"]
[ext_resource type="PackedScene" uid="uid://xcb3sy5rg4sn" path="res://Scenes/Menu/Map_Selection/map_selection.tscn" id="20_1ko50"]
[ext_resource type="Texture2D" uid="uid://deruwp6fuk5iw" path="res://Sprites/Menu/Settings/CogwheelIcon.png" id="20_w0s2i"]
[ext_resource type="Script" path="res://Scripts/Menu/Link_Button.gd" id="21_2xm1p"]
[ext_resource type="Texture2D" uid="uid://3fsr7b1jy2y7" path="res://Sprites/Menu/SupportIcons/Kofi.png" id="21_8p51f"]
[ext_resource type="PackedScene" uid="uid://dl5qufxb6ccbr" path="res://Scenes/Menu/Equipment/equipment_slimes.tscn" id="21_epiw6"]
[ext_resource type="Texture2D" uid="uid://cxj80b627drbr" path="res://Sprites/Menu/PlayCinematicIcon.png" id="21_sdcjo"]
[ext_resource type="Texture2D" uid="uid://xy5ygedvfnw2" path="res://Sprites/Menu/SupportIcons/itchio.png" id="22_ebjew"]
[ext_resource type="Texture2D" uid="uid://72q0qohj6j7r" path="res://Sprites/Menu/SupportIcons/Youtube.png" id="23_a4uw6"]
[ext_resource type="PackedScene" uid="uid://bqnkjpdhdu0t0" path="res://Scenes/Menu/credits.tscn" id="24_fakuu"]
[ext_resource type="Texture2D" uid="uid://bp3w6pel2ji5h" path="res://Sprites/Menu/EnemyAlmanacIcon.png" id="24_yq22v"]
[ext_resource type="PackedScene" uid="uid://chwjvfqwhjwen" path="res://Scenes/Menu/Equipment/equipment_hats.tscn" id="28_07o7c"]
[ext_resource type="PackedScene" uid="uid://c3355p6xk1fnk" path="res://Scenes/Menu/settings.tscn" id="28_l8aei"]
[ext_resource type="PackedScene" uid="uid://d4d0fselwe2cq" path="res://Scenes/Menu/Equipment/equipment_pets.tscn" id="31_13mkk"]
[ext_resource type="PackedScene" uid="uid://71c34tsp0mwa" path="res://Scenes/Menu/replay_cinematics.tscn" id="31_cc2vw"]
[ext_resource type="AudioStream" uid="uid://dne6un3kn5h2d" path="res://Sounds/ORU-Orange-Dreamsicle.ogg" id="34_sxt08"]
[ext_resource type="LabelSettings" uid="uid://cr6cnbs787fr1" path="res://Resources/Setted_Resources/cinematic_description_text.tres" id="34_wr5eu"]
[ext_resource type="PackedScene" uid="uid://dbqer4780q8t6" path="res://Scenes/Menu/enemy_almanac.tscn" id="36_qt7qq"]

[sub_resource type="LabelSettings" id="LabelSettings_iwvpy"]
font = ExtResource("3_cnaou")
font_size = 24
font_color = Color(0, 0.882353, 1, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pu0y0"]
font = ExtResource("3_cnaou")
font_color = Color(0.886275, 0, 0.886275, 1)
outline_size = 3
outline_color = Color(0.254902, 0, 0.917647, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kv2bw"]
font = ExtResource("3_cnaou")
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1.0
offset_bottom = 1.0
script = ExtResource("1_xhcat")

[node name="Background" type="Node2D" parent="."]

[node name="Slime" type="Node2D" parent="."]
position = Vector2(0, 20)

[node name="Pet" type="Node2D" parent="."]
position = Vector2(-24, -4)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="Title" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = -136.0
offset_top = -73.0
offset_right = 2.0
offset_bottom = -28.0
text = "Slime
   Shoot"
label_settings = SubResource("LabelSettings_iwvpy")

[node name="Version" type="Label" parent="Title"]
layout_mode = 0
offset_left = 227.0
offset_top = -6.0
offset_right = 282.0
offset_bottom = 1.0
text = "version"
label_settings = ExtResource("34_wr5eu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main_Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = -52.0
offset_right = 135.0
offset_bottom = 72.0

[node name="Start" type="TextureButton" parent="Main_Buttons"]
layout_mode = 2
texture_normal = ExtResource("6_dlnqk")
texture_pressed = ExtResource("7_djpoq")
texture_hover = ExtResource("8_1281r")

[node name="Text" type="Label" parent="Main_Buttons/Start"]
layout_mode = 0
offset_right = 105.0
offset_bottom = 28.0
text = "Start"
label_settings = SubResource("LabelSettings_pu0y0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controls" type="TextureButton" parent="Main_Buttons"]
layout_mode = 2
texture_normal = ExtResource("6_dlnqk")
texture_pressed = ExtResource("7_djpoq")
texture_hover = ExtResource("8_1281r")

[node name="Text" type="Label" parent="Main_Buttons/Controls"]
layout_mode = 0
offset_right = 105.0
offset_bottom = 28.0
text = "Controls"
label_settings = SubResource("LabelSettings_pu0y0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="TextureButton" parent="Main_Buttons"]
layout_mode = 2
texture_normal = ExtResource("6_dlnqk")
texture_pressed = ExtResource("7_djpoq")
texture_hover = ExtResource("8_1281r")

[node name="Text" type="Label" parent="Main_Buttons/Credits"]
layout_mode = 0
offset_right = 105.0
offset_bottom = 28.0
text = "Credits"
label_settings = SubResource("LabelSettings_pu0y0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="Main_Buttons"]
layout_mode = 2
texture_normal = ExtResource("6_dlnqk")
texture_pressed = ExtResource("7_djpoq")
texture_hover = ExtResource("8_1281r")

[node name="Text" type="Label" parent="Main_Buttons/Quit"]
layout_mode = 0
offset_right = 105.0
offset_bottom = 28.0
text = "Quit"
label_settings = SubResource("LabelSettings_pu0y0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Equipment_Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -137.0
offset_top = 12.0
offset_right = -77.0
offset_bottom = 72.0

[node name="First_Row" type="HBoxContainer" parent="Equipment_Buttons"]
layout_mode = 2

[node name="Weapons" type="TextureButton" parent="Equipment_Buttons/First_Row"]
self_modulate = Color(1, 0.231373, 0.172549, 1)
layout_mode = 2
texture_normal = ExtResource("13_nwiw3")
texture_pressed = ExtResource("14_57otj")
texture_hover = ExtResource("15_thdy0")

[node name="Weapon" type="Sprite2D" parent="Equipment_Buttons/First_Row/Weapons"]
position = Vector2(14, 14)
texture = ExtResource("13_e5syq")

[node name="Abilities" type="TextureButton" parent="Equipment_Buttons/First_Row"]
self_modulate = Color(1, 0.231373, 0.172549, 1)
layout_mode = 2
texture_normal = ExtResource("13_nwiw3")
texture_pressed = ExtResource("14_57otj")
texture_hover = ExtResource("15_thdy0")

[node name="Ability" type="Sprite2D" parent="Equipment_Buttons/First_Row/Abilities"]
position = Vector2(14, 14)
texture = ExtResource("14_vo8jy")

[node name="Passives" type="TextureButton" parent="Equipment_Buttons/First_Row"]
self_modulate = Color(1, 0.231373, 0.172549, 1)
layout_mode = 2
texture_normal = ExtResource("13_nwiw3")
texture_pressed = ExtResource("14_57otj")
texture_hover = ExtResource("15_thdy0")

[node name="Passive" type="Sprite2D" parent="Equipment_Buttons/First_Row/Passives"]
position = Vector2(14, 14)
texture = ExtResource("15_dwgj7")

[node name="Second_Row" type="HBoxContainer" parent="Equipment_Buttons"]
layout_mode = 2

[node name="Slimes" type="TextureButton" parent="Equipment_Buttons/Second_Row"]
self_modulate = Color(1, 0.231373, 0.172549, 1)
layout_mode = 2
texture_normal = ExtResource("13_nwiw3")
texture_pressed = ExtResource("14_57otj")
texture_hover = ExtResource("15_thdy0")

[node name="Slime" type="Sprite2D" parent="Equipment_Buttons/Second_Row/Slimes"]
position = Vector2(14, 14)
texture = ExtResource("3_qls2q")
hframes = 2

[node name="Hats" type="TextureButton" parent="Equipment_Buttons/Second_Row"]
self_modulate = Color(1, 0.231373, 0.172549, 1)
layout_mode = 2
texture_normal = ExtResource("13_nwiw3")
texture_pressed = ExtResource("14_57otj")
texture_hover = ExtResource("15_thdy0")

[node name="Hat" type="Sprite2D" parent="Equipment_Buttons/Second_Row/Hats"]
position = Vector2(14, 14)
texture = ExtResource("16_7gj2l")
hframes = 2

[node name="Pets" type="TextureButton" parent="Equipment_Buttons/Second_Row"]
self_modulate = Color(1, 0.231373, 0.172549, 1)
layout_mode = 2
texture_normal = ExtResource("13_nwiw3")
texture_pressed = ExtResource("14_57otj")
texture_hover = ExtResource("15_thdy0")

[node name="Pet" type="Sprite2D" parent="Equipment_Buttons/Second_Row/Pets"]
position = Vector2(14, 14)
texture = ExtResource("17_fyg1u")

[node name="Support_Buttons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -23.0
offset_top = -75.0
offset_right = 69.0
offset_bottom = -47.0
scale = Vector2(0.5, 0.5)
alignment = 1

[node name="Kofi" type="TextureButton" parent="Support_Buttons"]
self_modulate = Color(0.239216, 1, 0.356863, 1)
layout_mode = 2
texture_normal = ExtResource("13_nwiw3")
texture_pressed = ExtResource("14_57otj")
texture_hover = ExtResource("15_thdy0")
script = ExtResource("21_2xm1p")
link = "https://ko-fi.com/recery"

[node name="Icon" type="TextureRect" parent="Support_Buttons/Kofi"]
layout_mode = 0
offset_right = 28.0
offset_bottom = 28.0
texture = ExtResource("21_8p51f")
stretch_mode = 3

[node name="Itchio" type="TextureButton" parent="Support_Buttons"]
self_modulate = Color(0.239216, 1, 0.356863, 1)
layout_mode = 2
texture_normal = ExtResource("13_nwiw3")
texture_pressed = ExtResource("14_57otj")
texture_hover = ExtResource("15_thdy0")
script = ExtResource("21_2xm1p")
link = "https://recery.itch.io/"

[node name="Icon" type="TextureRect" parent="Support_Buttons/Itchio"]
layout_mode = 0
offset_right = 28.0
offset_bottom = 28.0
texture = ExtResource("22_ebjew")
stretch_mode = 3

[node name="Youtube" type="TextureButton" parent="Support_Buttons"]
self_modulate = Color(0.239216, 1, 0.356863, 1)
layout_mode = 2
texture_normal = ExtResource("13_nwiw3")
texture_pressed = ExtResource("14_57otj")
texture_hover = ExtResource("15_thdy0")
script = ExtResource("21_2xm1p")
link = "https://www.youtube.com/@Recery"

[node name="Icon" type="TextureRect" parent="Support_Buttons/Youtube"]
layout_mode = 0
offset_right = 28.0
offset_bottom = 28.0
texture = ExtResource("23_a4uw6")
stretch_mode = 3

[node name="Other_Buttons" type="Control" parent="."]
anchors_preset = 0
offset_right = 22.0
offset_bottom = 40.0

[node name="Shop_Button" type="TextureButton" parent="Other_Buttons"]
layout_mode = 0
offset_left = -137.0
offset_top = -20.0
offset_right = -109.0
offset_bottom = 8.0
texture_normal = ExtResource("10_efru8")
texture_pressed = ExtResource("11_dw1q6")
texture_hover = ExtResource("12_vnh5k")

[node name="Cart" type="Sprite2D" parent="Other_Buttons/Shop_Button"]
position = Vector2(14, 14)
texture = ExtResource("13_mrqpo")

[node name="Settings_Button" type="TextureButton" parent="Other_Buttons"]
layout_mode = 0
offset_left = -14.0
offset_top = 44.0
offset_right = 14.0
offset_bottom = 72.0
texture_normal = ExtResource("10_efru8")
texture_pressed = ExtResource("11_dw1q6")
texture_hover = ExtResource("12_vnh5k")

[node name="Cogwheel" type="Sprite2D" parent="Other_Buttons/Settings_Button"]
position = Vector2(14, 14)
texture = ExtResource("20_w0s2i")

[node name="Cinematics_Button" type="TextureButton" parent="Other_Buttons"]
layout_mode = 0
offset_left = -105.0
offset_top = -20.0
offset_right = -77.0
offset_bottom = 8.0
texture_normal = ExtResource("10_efru8")
texture_pressed = ExtResource("11_dw1q6")
texture_hover = ExtResource("12_vnh5k")

[node name="Play_Icon" type="Sprite2D" parent="Other_Buttons/Cinematics_Button"]
position = Vector2(14, 14)
texture = ExtResource("21_sdcjo")

[node name="Enemy_Almanac_Button" type="TextureButton" parent="Other_Buttons"]
layout_mode = 0
offset_left = -73.0
offset_top = -20.0
offset_right = -45.0
offset_bottom = 8.0
texture_normal = ExtResource("10_efru8")
texture_pressed = ExtResource("11_dw1q6")
texture_hover = ExtResource("12_vnh5k")

[node name="Icon" type="Sprite2D" parent="Other_Buttons/Enemy_Almanac_Button"]
position = Vector2(14, 14)
texture = ExtResource("24_yq22v")

[node name="Map_Selection" parent="." instance=ExtResource("20_1ko50")]
visible = false

[node name="Controls" parent="." instance=ExtResource("10_fuxtq")]
visible = false
layout_mode = 1

[node name="Credits" parent="." instance=ExtResource("24_fakuu")]

[node name="Equipment_Slimes" parent="." instance=ExtResource("21_epiw6")]
visible = false
layout_mode = 1
offset_right = -1.0
offset_bottom = -1.0

[node name="Equipment_Weapons" parent="." instance=ExtResource("14_mo1ho")]
visible = false
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Equipment_Abilities" parent="." instance=ExtResource("15_c7pa1")]
visible = false
layout_mode = 1

[node name="Equipment_Passives" parent="." instance=ExtResource("13_uba8n")]
visible = false
layout_mode = 1

[node name="Equipment_Hats" parent="." instance=ExtResource("28_07o7c")]
visible = false
layout_mode = 1
offset_right = -1.0
offset_bottom = -1.0

[node name="Equipment_Pets" parent="." instance=ExtResource("31_13mkk")]
visible = false
layout_mode = 1
offset_right = -1.0
offset_bottom = -1.0

[node name="Shop" parent="." instance=ExtResource("15_tg6bh")]
visible = false
layout_mode = 1

[node name="Settings" parent="." instance=ExtResource("28_l8aei")]
visible = false
layout_mode = 1

[node name="Replay_Cinematics" parent="." instance=ExtResource("31_cc2vw")]
visible = false

[node name="Enemy_Almanac" parent="." instance=ExtResource("36_qt7qq")]
visible = false

[node name="BackButton" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = -136.0
offset_top = 48.0
offset_right = -108.0
offset_bottom = 76.0
texture_normal = ExtResource("13_nwiw3")
texture_pressed = ExtResource("14_57otj")
texture_hover = ExtResource("15_thdy0")

[node name="BackText" type="Label" parent="BackButton"]
layout_mode = 0
offset_left = 8.0
offset_top = 7.0
offset_right = 18.0
offset_bottom = 21.0
text = "<"
label_settings = SubResource("LabelSettings_kv2bw")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("34_sxt08")
volume_db = 2.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Main_Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Main_Buttons/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Main_Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Main_Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Equipment_Buttons/First_Row/Weapons" to="." method="_on_weapons_pressed"]
[connection signal="pressed" from="Equipment_Buttons/First_Row/Abilities" to="." method="_on_abilities_pressed"]
[connection signal="pressed" from="Equipment_Buttons/First_Row/Passives" to="." method="_on_passives_pressed"]
[connection signal="pressed" from="Equipment_Buttons/Second_Row/Slimes" to="." method="_on_slimes_pressed"]
[connection signal="pressed" from="Equipment_Buttons/Second_Row/Hats" to="." method="_on_hats_pressed"]
[connection signal="pressed" from="Equipment_Buttons/Second_Row/Pets" to="." method="_on_pets_pressed"]
[connection signal="pressed" from="Other_Buttons/Shop_Button" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="Other_Buttons/Settings_Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Other_Buttons/Cinematics_Button" to="." method="_on_cinematics_button_pressed"]
[connection signal="pressed" from="Other_Buttons/Enemy_Almanac_Button" to="." method="_on_enemy_almanac_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
